[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/hud/player_display/dash_icon/dash_full.png" type="Texture" id=1]
[ext_resource path="res://scenes/hud/player_display/dash_icon/dash_icon.gd" type="Script" id=2]
[ext_resource path="res://scenes/hud/player_display/dash_icon/emptied_dash_icon_particles.tres" type="Material" id=3]
[ext_resource path="res://scenes/hud/player_display/dash_icon/refilled_dash_icon_particles.tres" type="Material" id=4]
[ext_resource path="res://scenes/hud/player_display/dash_icon/dash_empty.png" type="Texture" id=5]

[node name="DashIcon" type="Node2D"]
script = ExtResource( 2 )

[node name="FullIcon" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="EmptyIcon" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="EmptiedParticles" type="Particles2D" parent="."]
emitting = false
amount = 30
lifetime = 0.25
one_shot = true
explosiveness = 1.0
process_material = ExtResource( 3 )

[node name="RefilledParticles" type="Particles2D" parent="."]
position = Vector2( -12, -12 )
emitting = false
amount = 100
lifetime = 0.3
one_shot = true
process_material = ExtResource( 4 )
